@@ -7,16 +7,29 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 import aptech.project.educhain.common.result.ApiError;
+import aptech.project.educhain.common.result.AppResult;
 import aptech.project.educhain.data.entities.blogs.BlogComment;
 import aptech.project.educhain.data.entities.blogs.UserBlogVote;
 import aptech.project.educhain.domain.dtos.blogs.BlogCommentDTO;
 import aptech.project.educhain.domain.dtos.blogs.UserBlogVoteDTO;
+import aptech.project.educhain.domain.dtos.payment.OrderDTO;
+import aptech.project.educhain.domain.services.accounts.IJwtService;
+import aptech.project.educhain.domain.useCases.blogs.BlogUseCases.BlogFilterUseCase.BlogFilterParam;
+import aptech.project.educhain.domain.useCases.blogs.BlogUseCases.FindAllBlogUseCase.GetAllBlogParams;
+import aptech.project.educhain.domain.useCases.payment.order.getAllOrderUseCase.GetAllOrderParams;
 import aptech.project.educhain.endpoint.requests.blogs.CreateBlogReq;
+import aptech.project.educhain.endpoint.requests.blogs.FindAllBlogRequest;
 import aptech.project.educhain.endpoint.requests.blogs.VoteRequest;
+import aptech.project.educhain.endpoint.requests.payment.order.OrderRequest;
+import aptech.project.educhain.endpoint.responses.blogs.FilterBlogResponse;
+import aptech.project.educhain.endpoint.responses.blogs.GetAllBlogResponse;
+import aptech.project.educhain.endpoint.responses.payment.order.GetOrderResponse;
+import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Valid;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -46,7 +59,7 @@ public class BlogController {
     private String uploadDir;
 
     @Autowired
-    BlogService service;
+    BlogService blogService;
 
     @Autowired
     UserBlogVoteService userBlogVoteService;
@@ -63,18 +76,31 @@ public class BlogController {
     @Autowired
     BlogCategoryService blogCategoryService;
 
+    @Autowired
+    IJwtService iJwtService;
+
     @Operation(summary = "Get all blog")
-    @GetMapping("")
-    public List<BlogDTO> findAll() {
-        List<Blog> blogs = service.findAll();
+    @PostMapping("fetch")
+    public ResponseEntity<?> getAllBlogs(@RequestBody FindAllBlogRequest request) {
+        var params = modelMapper.map(request, GetAllBlogParams.class);
 
-        List<Blog> sortedBlogs = blogs.stream()
-                .sorted(Comparator.comparing(Blog::getCreatedAt).reversed())
-                .collect(Collectors.toList());
+        Pageable pageable = PageRequest.of(request.getPage(), request.getSize(), Sort.by(Sort.Direction.DESC, request.getSortBy()));
+        AppResult<Page<BlogDTO>> result = blogService.findAll(params);
+        if (result.isSuccess()) {
+            Page<BlogDTO> blogDTOPage = result.getSuccess();
+            List<GetAllBlogResponse> getAllBlogResponses = blogDTOPage.getContent()
+                    .stream()
+                    .map(blogDTO -> modelMapper.map(blogDTO, GetAllBlogResponse.class))
+                    .collect(Collectors.toList());
 
-        return sortedBlogs.stream()
-                .map(blog -> modelMapper.map(blog, BlogDTO.class))
-                .collect(Collectors.toList());
+            Page<GetAllBlogResponse> responsePage = new PageImpl<>(
+                    getAllBlogResponses,
+                    pageable,
+                    blogDTOPage.getTotalElements());
+
+            return ResponseEntity.ok().body(responsePage);
+        }
+        return ResponseEntity.badRequest().body(result.getFailure().getMessage());
     }
     
 
@@ -95,7 +121,7 @@ public class BlogController {
     @Operation(summary = "Get 1 blog")
     @GetMapping("/{id}")
     public BlogDTO findOne(@PathVariable Integer id) {
-        Blog blog = service.findOneBlog(id);
+        Blog blog = blogService.findOneBlog(id);
 
         BlogDTO blogDTO = modelMapper.map(blog, BlogDTO.class);
         List<BlogCommentDTO> commentDTOs = blog.getBlogComments().stream()
@@ -131,7 +157,45 @@ public class BlogController {
 
     @Operation(summary = "Add new blog")
     @PostMapping(value = "/create", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-    public ResponseEntity<?> create(@Valid @ModelAttribute CreateBlogReq req,BindingResult rs) {
+    public ResponseEntity<?> create(@Valid @ModelAttribute CreateBlogReq req, HttpServletRequest servletRequest, BindingResult rs) {
+        if (rs.hasErrors()) {
+            Map<String, String> errors = new HashMap<>();
+            rs.getFieldErrors().forEach(error -> errors.put(error.getField(), error.getDefaultMessage()));
+
+            ApiError apiError = new ApiError(errors);
+            return new ResponseEntity<>(apiError, HttpStatus.BAD_REQUEST);
+        }
+
+        try {
+            var user = iJwtService.getUserByHeaderToken(servletRequest.getHeader("Authorization"));
+
+
+            Blog blog = new Blog();
+            BlogCategory category = blogCategoryService.findBlogCategory(req.getBlogCategoryId());
+
+            blog.setUser(user);
+            blog.setTitle(req.getTitle());
+            blog.setBlogCategory(category);
+            blog.setBlogText(req.getBlogText());
+
+            if (req.getPhoto() != null && !req.getPhoto().isEmpty()) {
+                String fileName = uploadPhotoService.uploadPhoto(req.getPhoto());
+                blog.setPhoto(fileName);
+            }
+
+            Blog createdBlog = blogService.create(blog);
+            BlogDTO createdBlogDTO = modelMapper.map(createdBlog, BlogDTO.class);
+
+            return new ResponseEntity<>(createdBlogDTO, HttpStatus.CREATED);
+        } catch (Exception e) {
+            ApiError apiError = new ApiError("Error when creating blog");
+            return new ResponseEntity<>(apiError, HttpStatus.BAD_REQUEST);
+        }
+    }
+
+    @Operation(summary = "Edit blog")
+    @PutMapping(value = "/{id}", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    public ResponseEntity<?> update(@PathVariable Integer id, @Valid @ModelAttribute CreateBlogReq req, BindingResult rs) {
         if (rs.hasErrors()) {
             Map<String, String> errors = new HashMap<>();
             rs.getFieldErrors().forEach(error -> errors.put(error.getField(), error.getDefaultMessage()));
@@ -142,27 +206,37 @@ public class BlogController {
 
         try {
             String fileName = uploadPhotoService.uploadPhoto(req.getPhoto());
-            Blog blog = new Blog();
-            User user = userService.findUserById(req.getUserId());
+
+            Blog blog = blogService.findOneBlog(id);
             BlogCategory category = blogCategoryService.findBlogCategory(req.getBlogCategoryId());
 
-            blog.setUser(user);
             blog.setTitle(req.getTitle());
             blog.setBlogCategory(category);
             blog.setBlogText(req.getBlogText());
-            blog.setPhoto(fileName);
 
-            Blog createdBlog = service.create(blog);
+            String oldPhoto = blog.getPhoto();
+            String photoFile = fileName != null ? fileName : oldPhoto;
 
-            BlogDTO createdBlogDTO = modelMapper.map(createdBlog, BlogDTO.class);
+            blog.setPhoto(photoFile);
 
-            return new ResponseEntity<>(createdBlogDTO, HttpStatus.CREATED);
+            if (fileName != null) {
+                Path path = Paths.get(uploadDir);
+                Files.deleteIfExists(path.resolve(oldPhoto));
+            }
+
+            Blog updatedBlog = blogService.update(id, blog);
+
+            BlogDTO updatedBlogDTO = modelMapper.map(updatedBlog, BlogDTO.class);
+
+            return new ResponseEntity<>(updatedBlogDTO, HttpStatus.CREATED);
+
         } catch (Exception e) {
-            ApiError apiError = new ApiError("Error when creating blog");
+            ApiError apiError = new ApiError("Error when updating blog");
             return new ResponseEntity<>(apiError, HttpStatus.BAD_REQUEST);
-
         }
     }
+
+
 
     @Operation(summary = "Vote")
     @PostMapping("/vote")
@@ -194,77 +268,33 @@ public class BlogController {
         return true;
     }
 
-    @Operation(summary = "Edit blog")
-    @PutMapping(value = "/{id}", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-    public ResponseEntity<?> update(@Valid @ModelAttribute CreateBlogReq req, BindingResult rs) {
-        if (rs.hasErrors()) {
-            Map<String, String> errors = new HashMap<>();
-            rs.getFieldErrors().forEach(error -> errors.put(error.getField(), error.getDefaultMessage()));
 
-            ApiError apiError = new ApiError(errors);
-            return new ResponseEntity<>(apiError, HttpStatus.BAD_REQUEST);
-        }
-
-        try {
-            String fileName = uploadPhotoService.uploadPhoto(req.getPhoto());
-
-            Blog blog = service.findOneBlog(req.getUserId());
-            BlogCategory category = blogCategoryService.findBlogCategory(req.getBlogCategoryId());
-
-            blog.setTitle(req.getTitle());
-            blog.setBlogCategory(category);
-            blog.setBlogText(req.getBlogText());
-
-            String oldPhoto = blog.getPhoto();
-            String photoFile = fileName != null ? fileName : oldPhoto;
-
-            blog.setPhoto(photoFile);
-
-            if (fileName != null) {
-                Path path = Paths.get(uploadDir);
-                Files.deleteIfExists(path.resolve(oldPhoto));
-            }
-
-            Blog updatedBlog = service.update(req.getUserId(), blog);
-
-            BlogDTO updatedBlogDTO = modelMapper.map(updatedBlog, BlogDTO.class);
-
-            return new ResponseEntity<>(updatedBlogDTO, HttpStatus.OK);
-        } catch (Exception e) {
-            ApiError apiError = new ApiError("Error when creating blog");
-            return new ResponseEntity<>(apiError, HttpStatus.BAD_REQUEST);
-        }
-    }
 
     @Operation(summary = "Delete blog")
     @DeleteMapping("/{id}")
     public boolean delete(@PathVariable Integer id) {
-        return service.delete(id);
+        return blogService.delete(id);
     }
 
-    @GetMapping("/filter")
-    public List<BlogDTO> filter(
-            @RequestParam(required = false) String sortStrategy,
-            @RequestParam(required = false) String keyword,
-            @RequestParam(required = false) Integer[] categoryIdArray) {
+    @PostMapping("/filter")
+    public ResponseEntity<?> filter(@RequestBody FilterBlogRequest request) {
+        var params = modelMapper.map(request, BlogFilterParam.class);
 
-        System.out.println(sortStrategy);
-        System.out.println(keyword);
-        System.out.println(Arrays.stream(categoryIdArray).toList());
+        AppResult<Page<BlogDTO>> result = blogService.filter(params);
+        if (result.isSuccess()) {
+            Page<BlogDTO> blogDTOPage = result.getSuccess();
+            List<FilterBlogResponse> filterBlogResponses = blogDTOPage.getContent()
+                    .stream()
+                    .map(blogDTO -> modelMapper.map(blogDTO, FilterBlogResponse.class))
+                    .collect(Collectors.toList());
 
-        List<Blog> blogs = service.findAll();
-        if (categoryIdArray != null && categoryIdArray.length > 0){
-            blogs = service.findByCategory(blogs, categoryIdArray);
+            Page<FilterBlogResponse> responsePage = new PageImpl<>(
+                    filterBlogResponses,
+                    PageRequest.of(request.getPage(), request.getSize()),
+                    blogDTOPage.getTotalElements());
 
+            return ResponseEntity.ok().body(responsePage);
         }
-        if (keyword != null || !keyword.isEmpty() || keyword != ""){
-            blogs = service.search(blogs, keyword);
-
-        }
-
-        if (sortStrategy != null || !sortStrategy.isEmpty() || sortStrategy != "" ){
-            blogs = service.sorting(blogs, service.getSortStrategy(sortStrategy));
-        }
-        return blogs.stream().map(blog -> modelMapper.map(blog, BlogDTO.class)).collect(Collectors.toList());
+        return ResponseEntity.badRequest().body(result.getFailure().getMessage());
     }
 }
